# tensorlite

./: CMakeLists.txt  README.md  main.cpp
examples/: CMakeCache.txt  CMakeLists.txt  example_1.cpp
include/: Activations.h  Directives.h  Layer.h  Tensor.h  Tensor2D.h  Utility.h
src/: Activations.cpp  Tensor.cpp  Tensor2D.cpp  Utility.cpp
tests/: t_Tensor.cpp  t_Tensor2D.cpp
